[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kabi"
version = "0.1.0"
description = "Tool for checking kABI and providing diagnostics when kABI is broken"
readme = "README.txt"
requires-python = ">=3.11"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Stephen Brennan", email="stephen.s.brennan@oracle.com"},
    {name = "Quentin Casasnovas", email="quentin.casasnovas@vates.tech"},
]
keywords = ["kernel", "kabi", "symtypes", "genksyms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Environment :: Console",
]

dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=24.10.0",
    "ruff>=0.1.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "types-Pygments>=2.19.0",
]

[project.urls]
Homepage = "https://github.com/xcp-ng/xcp-ng-drivers"
Repository = "https://github.com/xcp-ng/xcp-ng-drivers"
Issues = "https://github.com/xcp-ng/xcp-ng-drivers/issues"

[project.scripts]
kabi = "kabi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kabi"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
